# tokimono

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: config.toml.example
src/: app.rs  config.rs  event.rs  main.rs  metrics.rs  sparkline.rs  ui.rs
