[package]
name = "tokimono"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
ratatui = "0.30.2"
sysinfo = "0.39.6"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "time"] }
