[package]
name = "tokimono"
version = "0.1.0"
edition = "2024"
description = "A fast, modern, Tokio-powered terminal system monitor for Linux."
license = "Apache-2.0"
repository = "https://github.com/lazyIhsan/tokimono"
readme = "README.md"
keywords = ["tui", "monitor", "system", "terminal", "htop"]
categories = ["command-line-utilities"]

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
libc = "0.2.186"
nvml-wrapper = "0.12.1"
ratatui = { version = "0.30.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.39.6"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "time"] }
toml = "1.1.3"
